--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ td {
   max-width: 900px;
   max-height: 600px;
   margin: auto;
+  margin-bottom: 20px;
   border-radius: 10px;
   margin-bottom: 20px;
   background-color: #e2e0e0;
