--- a/style.css
+++ b/style.css
@@ -109,9 +109,7 @@ td {
   border-radius: 10px;
   background-color: #e4e4e4;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 100px 80px rgba(0, 0, 0, 0.12);
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06);
 }
 
 .canvasjs-chart-credit {
@@ -129,13 +127,47 @@ td {
   margin-bottom: 20px;
   background-color: #e2e0e0;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 100px 80px rgba(0, 0, 0, 0.12);
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06);
+}
+
+.bg {
+  background-color: #fafefd;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 1000'%3E%3Cg %3E%3Ccircle fill='%23fafefd' cx='50' cy='0' r='50'/%3E%3Cg fill='%23ecf8f6' %3E%3Ccircle cx='0' cy='50' r='50'/%3E%3Ccircle cx='100' cy='50' r='50'/%3E%3C/g%3E%3Ccircle fill='%23def1f1' cx='50' cy='100' r='50'/%3E%3Cg fill='%23d0eaec' %3E%3Ccircle cx='0' cy='150' r='50'/%3E%3Ccircle cx='100' cy='150' r='50'/%3E%3C/g%3E%3Ccircle fill='%23c3e3e9' cx='50' cy='200' r='50'/%3E%3Cg fill='%23b6dce7' %3E%3Ccircle cx='0' cy='250' r='50'/%3E%3Ccircle cx='100' cy='250' r='50'/%3E%3C/g%3E%3Ccircle fill='%23aad5e6' cx='50' cy='300' r='50'/%3E%3Cg fill='%239fcde4' %3E%3Ccircle cx='0' cy='350' r='50'/%3E%3Ccircle cx='100' cy='350' r='50'/%3E%3C/g%3E%3Ccircle fill='%2397c5e3' cx='50' cy='400' r='50'/%3E%3Cg fill='%2390bce2' %3E%3Ccircle cx='0' cy='450' r='50'/%3E%3Ccircle cx='100' cy='450' r='50'/%3E%3C/g%3E%3Ccircle fill='%238db3df' cx='50' cy='500' r='50'/%3E%3Cg fill='%238ca9dc' %3E%3Ccircle cx='0' cy='550' r='50'/%3E%3Ccircle cx='100' cy='550' r='50'/%3E%3C/g%3E%3Ccircle fill='%238d9fd8' cx='50' cy='600' r='50'/%3E%3Cg fill='%239195d2' %3E%3Ccircle cx='0' cy='650' r='50'/%3E%3Ccircle cx='100' cy='650' r='50'/%3E%3C/g%3E%3Ccircle fill='%23968aca' cx='50' cy='700' r='50'/%3E%3Cg fill='%239c7ec0' %3E%3Ccircle cx='0' cy='750' r='50'/%3E%3Ccircle cx='100' cy='750' r='50'/%3E%3C/g%3E%3Ccircle fill='%23a272b5' cx='50' cy='800' r='50'/%3E%3Cg fill='%23a766a7' %3E%3Ccircle cx='0' cy='850' r='50'/%3E%3Ccircle cx='100' cy='850' r='50'/%3E%3C/g%3E%3Ccircle fill='%23ab5998' cx='50' cy='900' r='50'/%3E%3Cg fill='%23ae4b87' %3E%3Ccircle cx='0' cy='950' r='50'/%3E%3Ccircle cx='100' cy='950' r='50'/%3E%3C/g%3E%3Ccircle fill='%23af3e75' cx='50' cy='1000' r='50'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: contain;
 }
 
 #india-statewise-cases tr {
   border-bottom: 1px dashed coral;
+}
+
+a {
+  color: #7dff04;
+  position: relative;
+  text-decoration: none;
+  transition: color 0.4s ease-out;
+}
+
+a:hover {
+  color: #0bc238;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+a:hover::after {
+  border-color: #fafafa;
+  right: 0;
+}
+
+a::after {
+  border-radius: 1em;
+  border-top: 1px solid #f8f8f8;
+  content: '';
+  position: absolute;
+  right: 100%;
+  bottom: 0.14em;
+  left: 0;
+  transition: right 0.5s cubic-bezier(0, 0.5, 0, 1), all 0.4s ease-out;
 }
 
 #map {
