--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: content-box;
-  background-color: #fff1f1;
+  background-color: #ffffff;
   /* overflow-x: hidden; */
 }
 
